welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:1: error: Missing closing brace `}' assumed here
while (!estFaceMur){
^DwarfCode:2: error: '(' expected but identifier found.
  if getDirection()==Direction.EAST{
     ^