welcome.lessons.welcome.summative.Moria.scala.code
while (!estFaceMur){
  if getDirection()==Direction.EAST{
    while (!estSurBiscuit){
      avance()
    }
    prendBiscuit()
    retourne()
    while (!estSurBiscuit){
      avance()
    }
    recule()
    poseBiscuit()
  }
  else{
    retourne()
    while (!estSurBiscuit){
      avance()
    }
    prendBiscuit()
    retourne()
    while (!estSurBiscuit){
      avance()
    }
    recule()
    poseBiscuit()
}
droite()
avance()
gauche()
avance()
